Fixed text alignment for RTL languages.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,7 +5,7 @@
   right: 5px;
   z-index: 9999999;
   padding: 0 20px 0;
-  text-align: left;
+  text-align: start;
   background: #fff;
   color: #3a3a3a;
   border: 5px solid #3a3a3a;
